# THRPG

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  THRPG.toml.sample  docker-compose.yml
.github/workflows/: rust.yml
bins/bot/: Cargo.toml
bins/bot/src/: info.rs  main.rs  play.rs
bins/webapi/: Cargo.toml
bins/webapi/src/: main.rs
chara/: marisa.toml  reimu.toml  sakuya.toml
docs/: readme-ja.md
extensions/sample/: manifest.toml
i18n/: ja.toml
i18n/ja-JP/: setting_i18n.ftl
libs/battle_machine/: Cargo.toml
libs/battle_machine/src/: builder.rs  chara.rs  lib.rs  mode.rs  rpg_core.rs  utils.rs
libs/bot_command/: Cargo.toml
libs/bot_command/src/: info.rs  lib.rs  play.rs
libs/command_builder/: Cargo.toml
libs/command_builder/src/: action_manage.rs  commander.rs  lib.rs
libs/extension/: Cargo.toml
libs/extension/src/: extension.rs  extension_config.rs  extension_manage.rs  lib.rs  store.rs
libs/extension_api/: Cargo.toml
libs/extension_api/src/: lib.rs  thrpg_sys.rs
libs/extension_config/: Cargo.toml
libs/extension_config/src/: extension.rs  lib.rs
libs/extension_wasm/: Cargo.toml
libs/extension_wasm/src/: lib.rs
libs/osf_parse/: Cargo.toml
libs/osf_parse/src/: lib.rs
libs/setting_config/: Cargo.toml
libs/setting_config/src/: lib.rs
libs/setting_i18n/: Cargo.toml  i18n.toml
libs/setting_i18n/src/: lib.rs
libs/thrpg_database/: Cargo.toml
libs/thrpg_database/src/: lib.rs  playdata.rs  score.rs  userdata.rs
libs/thrpg_log/: Cargo.toml
libs/thrpg_utils/: Cargo.toml
libs/thrpg_utils/src/: lib.rs
libs/webapi_scheme/: Cargo.toml
libs/webapi_scheme/src/: lib.rs  model.rs
sqls/: init.sql
src/: battle.rs  command.rs  database.rs  extension.rs  lib.rs  log.rs  lua.rs  main.rs  setting.rs  webapi.rs
src/battle/: builder.rs  model.rs  rpg_core.rs  utils.rs
src/cmds/: embeds.rs  mod.rs  ping.rs  voice.rs
src/command/: author.rs  command_extension.rs  infos.rs  play.rs
src/database/: playdata.rs  save.rs  score.rs
src/extension/: config.rs  extension.rs  wasm.rs
src/webapi/: model.rs
thrpg-lua/: Cargo.toml
thrpg-lua/src/: lib.rs
