[package]
name = "thrpg"
version = "0.1.0"
edition = "2021"
authors=["KaniyaSimeji"]
license="MIT OR Apache-2.0"
keywords=["discord", "bot", "game"]
categories=["games"]
description="Touhou Project's secondary creative games"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["full"]
full = []

[dependencies]
tokio = { version = "1.15", features = ["full"] }
regex = "1.5"
axum="0.4"
# Since the main toml-rs is in maintenance mode, we will use this fork that supports multi-line
toml = { git="https://github.com/umegaya/toml-rs.git", branch = "umegaya/multiline-inline-table"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rand = { version="0.8", features=["std_rng","std"]}
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.9"
tracing = "0.1"
uuid = { version="0.8", features=["v4"]}
url = "2.2"
semver = "1.0"
chrono = "0.4"
wasmer = "2.2"
wasmer-compiler-cranelift="2.2"
wasmer-engine-universal="2.2"
combine = "4.6"
[dependencies.serenity]
default-features = false
features = [
    "builder",
    "collector",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "cache"
]
version = "0.10"
[dependencies.redis]
version = "0.21"
features = [
    "aio",
    "tokio-comp",
    "tokio-native-tls-comp"
]
[dependencies.sea-orm]
version = "0.6"
features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros"
]
default-features = false

