[workspace]
members = [
	"libs/battle_machine",
	"libs/thrpg_database",
	"libs/thrpg_log",
	"libs/extension_wasm",
	"libs/extension_config",
	"libs/extension_api",
	"libs/osf_parse",
	"libs/setting_i18n",
	"libs/setting_config",
	"libs/bot_command",
	"libs/webapi_scheme",
	"bins/bot",
	"bins/webapi"
]
default-members = ["bins/bot"]
exclude=[]
