[workspace]
members = [
	"libs/battle_machine",
	"libs/thrpg_database",
	"libs/extension",
	"libs/extension_api",
	"libs/osf_parse",
	"libs/setting_i18n",
	"libs/setting_config",
	"libs/command_builder",
	"libs/webapi_scheme",
	"libs/thrpg_utils",
	"bins/bot",
	"bins/webapi"
]
default-members = ["bins/bot"]
exclude=[]
