[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["full"] }
wasmer="2.2"
anyhow="1.0"
indexmap = "1.8"
once_cell = "1.9"
setting_config = { path= "../../libs/setting_config" }
battle_machine = { path="../../libs/battle_machine" }
command_builder = { path="../../libs/command_builder" }
thrpg_database = { path="../../libs/thrpg_database" }
extension = { path="../../libs/extension" }
setting_i18n = { path="../../libs/setting_i18n/" }

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "collector",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "cache"
]
version = "0.11"

[dependencies.sea-orm]
version = "0.9"
features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros"
]
default-features = false


