[package]
name = "battle_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version="1.1", features=["v4", "serde"]}
rand = { version="0.8", features=["std_rng","std"]}
chrono = "0.4"
serde_json = "1"
once_cell = "1.9"
anyhow = "1.0"
tokio = { version = "1.15", features = ["full"] }
toml = { git="https://github.com/umegaya/toml-rs.git", branch = "umegaya/multiline-inline-table"}
regex = "1.5"
thrpg_database = { path="../thrpg_database" }
thrpg_utils = { path="../thrpg_utils" }
