[package]
name = "command_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.15", features = ["full"] }
once_cell = "1.9"
serde = { version = "1.0", features = ["derive"] }
regex = "1.6"

setting_config = { path="../setting_config" }
setting_i18n = { path="../setting_i18n" }
battle_machine = { path="../battle_machine" }
thrpg_database = { path="../thrpg_database" }
thrpg_utils = { path="../thrpg_utils" }

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "collector",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "cache"
]
version = "0.11"


