[package]
name = "extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.2"
toml = { git="https://github.com/umegaya/toml-rs.git", branch = "umegaya/multiline-inline-table"}
semver = "1.0"
tokio = { version = "1.15", features = ["fs"] }
indexmap = "1.8"
bitflags = "1.3"

extension_wasm = { path="../extension_wasm" }
extension_config = { path="../extension_config" }
osf_parse = { path="../osf_parse" }
