[package]
name = "extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.2"
toml = { git="https://github.com/umegaya/toml-rs.git", branch = "umegaya/multiline-inline-table"}
semver = "1.0"
tokio = { version = "1.15", features = ["full"] }
indexmap = "1.8"
bitflags = "1.3"
wasmer = "2.2"
wasmer-wasi = "2.2"
serde_json = "1.0"

osf_parse = { path="../osf_parse" }
