[package]
name = "setting_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["fs"] }
toml = { git="https://github.com/umegaya/toml-rs.git", branch = "umegaya/multiline-inline-table"}
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
url = "2.2"
uuid = { version="0.8", features=["v4"]}
