[package]
name = "setting_i18n"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9"
serde = { version = "1.0", features = ["derive"] }
toml = { git="https://github.com/umegaya/toml-rs.git", branch = "umegaya/multiline-inline-table"}
setting_config = { path = "../setting_config" }
thrpg_utils = { path = "../thrpg_utils/" }
i18n-embed = { version = "0.13", features = ["fluent-system", "desktop-requester"]}
rust-embed = "6.4"
unic-langid = { version = "0.9", features = ["macros"]}
i18n-embed-fl = "0.6"
fluent = "0.16"
anyhow = "1.0"
tokio = { version = "1.20", features = ["full"] }
intl-memoizer = "0.5.1"
