[package]
name = "thrpg_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version="1.1", features=["v4","serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1.0"

[dependencies.redis]
version = "0.21"
features = [
    "aio",
    "tokio-comp",
    "tokio-native-tls-comp"
]
[dependencies.sea-orm]
version = "0.9"
features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros"
]
