[package]
name = "thrpg_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = { git="https://github.com/umegaya/toml-rs.git", branch = "umegaya/multiline-inline-table"}
anyhow = "1.0"
tokio = { version = "1.15", features = ["full"] }
